# multi-stock-datasource

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
stock_data_normalizer/: __init__.py  base.py  cache_service.py  models.py
stock_data_normalizer/normalizers/: __init__.py
stock_data_normalizer/services/: __init__.py
stock_data_normalizer/tests/: __init__.py  test_merger.py  test_models.py  test_normalizers.py
